--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -1,8 +1,10 @@
 .blurred-theme, .blurred-screen {
     position: absolute;
-    top: 0%; left: 0%;
-    width: 100%; height: 100%;
+    left: 0%;
+    top: 0%;
+    width: 100%; height: 100vh;
     background: #222d;
+    overflow: hidden;
    /*  filter:blur(20px); */
     display: flex;
     align-items: center;
@@ -105,4 +107,15 @@
 
 .choose-confirm {
     color: hsl(120, 60%, 45%);
+}
+
+@media screen and (orientation: landscape) and (max-width: 1100px) {
+
+    .reset-box, .win-screen, .info-box {
+        max-width: 60%;
+    }
+}
+
+@media screen and (orientation: landscape) and (min-width: 1101px) {
+
 }
