--- a/src/styles/sudoku.css
+++ b/src/styles/sudoku.css
@@ -4,6 +4,7 @@
     width: 100%;
     height: 100%;
     font-family: 'Audiowide', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    overflow-x: hidden;
 }
 
 .sudoku-day, .all-day {
